--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css" />
   </head>
 
-  <body>
+  <body id="body">
     <div id="root"></div>
   </body>
 </html>
